Removed venv and pychache files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 20241226_skillfactory.zip
-.venv/*
-*.venv*/*
-*.idea/*
+.venv*
+.idea/*
 .gigaidea/*
 .vscode/*
 antiter/data/*.xml
 antiter/data/*.zip
-antiter/data/16.12.2024.doc
+**/__pycache__/
+.gigaidea/
+.venv*/
+.gigaidea/
+.vscode/
+.idea/
+config/
+20241226_skillfactory.zip
