Add path to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 20241226_skillfactory.zip
-.venv*
-.idea/*
-.gigaidea/*
-.vscode/*
 antiter/data/*.xml
 antiter/data/*.zip
 **/__pycache__/
 .gigaidea/
-.venv*/
+.venv/
+.venv311/
+.venv312/
+.venv313/
 .gigaidea/
 .vscode/
 .idea/
 config/
-20241226_skillfactory.zip
+**/.env*
